--- a/index.html
+++ b/index.html
@@ -136,28 +136,45 @@
 </section>
 
 <section>
-  <h2>Logotipos</h2>
   <div class="carrossel">
+  <!-- Seta para voltar -->
+  <button class="carrossel-seta carrossel-seta-esquerda" onclick="moverCarrossel(-1)">&#10094;</button>
+  
   <div class="carrossel-container">
       <div class="carrossel-item">
-          <img src="imagem1.jpg" alt="Imagem 1">
+          <img src="gallery/logos/cjp-240x215.png" alt="Imagem 1">
       </div>
       <div class="carrossel-item">
-          <img src="imagem2.jpg" alt="Imagem 2">
+          <img src="gallery/logos/copy7-575x515.png" alt="Imagem 2">
       </div>
       <div class="carrossel-item">
-          <img src="imagem3.jpg" alt="Imagem 3">
+          <img src="gallery/logos/corpo-575x515.png" alt="Imagem 3">
       </div>
       <div class="carrossel-item">
-          <img src="imagem4.jpg" alt="Imagem 4">
+          <img src="gallery/logos/fatima-575x515.png" alt="Imagem 4">
       </div>
       <div class="carrossel-item">
-          <img src="imagem5.jpg" alt="Imagem 5">
+          <img src="gallery/logos/icl-575x515.png" alt="Imagem 5">
       </div>
       <div class="carrossel-item">
-          <img src="imagem6.jpg" alt="Imagem 6">
+          <img src="gallery/logos/optica-575x515.png" alt="Imagem 6">
+      </div>
+      <div class="carrossel-item">
+          <img src="gallery/logos/paes-575x515.png" alt="Imagem 7">
+      </div>
+      <div class="carrossel-item">
+          <img src="gallery/logos/papirus-575x515.png" alt="Imagem 8">
+      </div>
+      <div class="carrossel-item">
+          <img src="gallery/logos/respire-575x515.png" alt="Imagem 9">
+      </div>
+      <div class="carrossel-item">
+          <img src="gallery/logos/zen-575x515.png" alt="Imagem 10">
       </div>
   </div>
+
+  <!-- Seta para avançar -->
+  <button class="carrossel-seta carrossel-seta-direita" onclick="moverCarrossel(1)">&#10095;</button>
 </div>
 </section>
 
