--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 <!-- Seção de Websites -->
 <section class="image-section">
         <div class="image-container">
-          <a href="https://link1.com">
+          <a href="https://www.developer.ca/dashboard" target="_blank">
             <img src="imagem1.jpg" alt="Imagem 1">
-            <p>Texto 1</p>
+            <p>Dashboard in Angular</p>
           </a>
         </div>
         <div class="image-container">
