--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- Seção de Websites -->
 <section class="image-section">
         <div class="image-container">
-          <a href="https://www.developer.ca/dashboard" target="_blank">
+          <a href="https://www.lucasdeveloper.ca/dashboard" target="_blank">
             <img src="imagem1.jpg" alt="Imagem 1">
             <p>Dashboard in Angular</p>
           </a>
