--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 <!-- Seção de Websites -->
 <section class="image-section">
         <div class="image-container">
-          <a href="https://www.lucasdeveloper.ca/dashboard" target="_blank">
-            <img src="imagem1.jpg" alt="Imagem 1">
+          <a href="https://www.lucasdeveloper.ca/analytics-dashboard" target="_blank">
+            <img src="gallery/analytics-dashboard.jpg" alt="analytics-dashboard">
             <p>Dashboard in Angular</p>
           </a>
         </div>
