--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           </a>
         </div>
         <div class="image-container">
-          <a href="https://link2.com">
-            <img src="imagem2.jpg" alt="Imagem 2">
+          <a href="https://www.lucasdeveloper.ca/movies">
+            <img src="gallery/movies.jpg" alt="movies">
             <p>Texto 2</p>
           </a>
         </div>
