--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="image-container">
           <a href="https://www.lucasdeveloper.ca/movies">
             <img src="gallery/movies.jpg" alt="movies">
-            <p>Texto 2</p>
+            <p>Movies in React</p>
           </a>
         </div>
         <div class="image-container">
