correcao do index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Lucas Alves</h1>
+        <h1>Lucas Soares</h1>
         <p>Front-End Developer | Scrum Master | Digital Creator</p>
 
         <!-- Botão do menu hambúrguer -->
@@ -22,29 +22,33 @@
         <!-- Menu de navegação -->
         <nav>
             <ul>
-                <li><a href="#about">Sobre</a></li>
-                <li><a href="#skills">Habilidades</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#websites">Web Sites</a></li>
-                <li><a href="#certifications">Certificações</a></li>
-                <li><a href="#contact">Contato</a></li>
+                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="about">
-        <h2>Sobre Mim</h2>
-        <p>Sou um desenvolvedor Front-End com experiência em criação de sites, design digital e metodologias ágeis.</p>
+        <h2>About me</h2>
+        <p>I am a Front-End Developer with hands-on experience in building 
+          responsive websites, creating clean digital designs, and applying 
+          Agile methodologies. I am passionate about developing user-friendly 
+          applications, continuously improving my technical skills in React and 
+          Node.js, and contributing to collaborative, value-driven teams.</p>
     </section>
 
     <!-- Seção de Habilidades -->
     <section id="skills">
-        <h2>Habilidades</h2>
+        <h2>Skills</h2>
         <ul>
             <li>HTML & CSS</li>
             <li>JavaScript</li>
             <li>React</li>
-            <li>Metodologias Ágeis (Scrum, Kanban)</li>
-            <li>Design Responsivo</li>
+            <li>Agile Methodologies (Scrum, Kanban)</li>
+            <li>Responsive Design</li>
         </ul>
     </section>
 
@@ -63,15 +67,15 @@
           </a>
         </div>
         <div class="image-container">
-          <a href="https://link3.com">
+          <a href="#">
             <img src="imagem3.jpg" alt="Imagem 3">
-            <p>Texto 3</p>
+            <p>-----</p>
           </a>
         </div>
         <div class="image-container">
-          <a href="https://link4.com">
+          <a href="#">
             <img src="imagem4.jpg" alt="Imagem 4">
-            <p>Texto 4</p>
+            <p>-----</p>
           </a>
         </div>
       
@@ -114,7 +118,7 @@
 
     <!-- Seção de Certificações -->
 <section>
-    <h2>Certificações</h2>
+    <h2>Certifications</h2>
     <div id="certifications">
         <div class="certification-item" onclick="openImage('gallery/scrum.jpg')">
             <img src="gallery/scrum-thumb.jpg" alt="Scrum Master" />
@@ -136,6 +140,7 @@
 </section>
 
 <section>
+  <h2>Creative Work: Logo Design</h2>
   <div class="carrossel">
   <!-- Seta para voltar -->
   <button class="carrossel-seta carrossel-seta-esquerda" onclick="moverCarrossel(-1)">&#10094;</button>
@@ -186,11 +191,11 @@
 
     <!-- Seção de Contato -->
     <section id="contact">
-        <h2>Contato</h2>
-        <p>Você pode me encontrar nas seguintes plataformas:</p>
+        <h2>Contact</h2>
+        <p>Connect with me on:</p>
         <ul>
-            <li>Email: lucas.alves@example.com</li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/lucasalves">linkedin.com/in/lucasalves</a></li>
+            <li>Email: lucash.tads@gmail.com</li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/lucas-ha-soares/">linkedin.com/in/lucas-ha-soares</a></li>
             <li>GitHub: <a href="https://github.com/lucasalves">github.com/lucasalves</a></li>
         </ul>
     </section>
