--- a/salaryCalculator/index.html
+++ b/salaryCalculator/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salary Calculator</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Salary Calculator</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet">
 </head>
-<body>
-    <h2>
-        Salary Calculator
-    </h2> 
+<body class="bg-light p-4">
 
-    <p>Type the time to add</p>
-    <input type="number" id="horaDigitada" placeholder="Type the hour">
-    <button onclick="btnAdicionar()">Add hour</button>
-    <div id="resultado"></div>
-    <div id="dias"></div>
-    <br>
-    <div id="areaDesfazerUltimoDia"></div>
-    
-    <br>
-    <p id="relatorio"></p>
-    
-    <p>Type the value or hour</p>
-    <input type="number" id="valorHora" placeholder="Hour value">
-    <button onclick="calcularValor()">Calculator</button>
-    <br>
-    <p id="valorReceber"></p>
-    <button onclick="limpa()">CLEAR</button>    
-    <script src="index.js"></script>
+  <div class="container bg-white p-4 rounded shadow-sm">
+    <h2 class="mb-3 text-primary text-center">💰 Salary Calculator</h2>
+
+    <div class="mb-4">
+      <p class="fw-semibold">Add working hours:</p>
+      <div class="input-group mb-2">
+        <input type="number" id="horaDigitada" class="form-control" placeholder="Type the hour">
+        <button class="btn btn-success" onclick="btnAdicionar()">Add hour</button>
+      </div>
+      <div id="resultado" class="mt-2"></div>
+      <div id="dias" class="text-secondary small"></div>
+      <div class="mt-3" id="areaDesfazerUltimoDia"></div>
+    </div>
+
+    <hr>
+
+    <div class="mb-4">
+      <p class="fw-semibold">Type the value per hour:</p>
+      <div class="input-group mb-2">
+        <input type="number" id="valorHora" class="form-control" placeholder="Hour value">
+        <button class="btn btn-primary" onclick="calcularValor()">Calculate</button>
+      </div>
+      <div id="valorReceber" class="mt-3 text-success fw-bold"></div>
+    </div>
+
+    <hr>
+    <div id="relatorio" class="mb-3"></div>
+    <button class="btn btn-outline-danger w-100" onclick="limpa()">Clear All</button>
+  </div>
+
+  <script src="index.js"></script>
 </body>
 </html>
