--- a/salaryCalculator/index.html
+++ b/salaryCalculator/index.html
@@ -21,7 +21,8 @@
       </div>
       <div id="resultado" class="mt-2"></div>
       <div id="dias" class="text-secondary small"></div>
-      <div class="mt-3" id="areaDesfazerUltimoDia"></div>
+      <div class="mt-3" id="areaDesfazerUltimoDia"></div><br>
+      <div id="relatorio" class="mb-3"></div>
     </div>
 
     <hr>
@@ -36,7 +37,7 @@
     </div>
 
     <hr>
-    <div id="relatorio" class="mb-3"></div>
+    
     <button class="btn btn-outline-danger w-100" onclick="limpa()">Clear All</button>
   </div>
 
