--- a/salaryCalculator/index.html
+++ b/salaryCalculator/index.html
@@ -41,6 +41,6 @@
     <button class="btn btn-outline-danger w-100" onclick="limpa()">Clear All</button>
   </div>
 
-  <script src="index.js"></script>
+  <script src="./index.js" defer></script>
 </body>
 </html>
