endereco do index.js

--- a/salaryCalculator/index.html
+++ b/salaryCalculator/index.html
@@ -42,6 +42,6 @@
     <button class="btn btn-outline-danger w-100" onclick="limpa()">Clear All</button>
   </div>
 
-  <script src="index.js"></script>
+  <script src="https://www.lucasdeveloper.ca/salaryCalculator/index.js"></script>
 </body>
 </html>
