correcao endereco do git

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="card-content">
         <h3>Neurocore Pilates</h3>
         <p>Introducing a pioneering health concept, our Pilates studio features a team of skilled and seasoned professionals committed to your well-being.</p>
-        <a href="https://www.neurocorepilates.com.br/" class="btn" target="_blank" rel="noopener noreferrer">To view</a>
+        <a href="#" class="btn" target="_blank" rel="noopener noreferrer" disabled="disabled">To view</a>
       </div>
     </div>
   
@@ -194,9 +194,9 @@
         <h2>Contact</h2>
         <p>Connect with me on:</p>
         <ul>
-            <li>Email: lucash.tads@gmail.com</li>
+            <li>Email: lucashasoares@gmail.com</li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/lucas-ha-soares/">linkedin.com/in/lucas-ha-soares</a></li>
-            <li>GitHub: <a href="https://github.com/lucasalves">github.com/lucasalves</a></li>
+            <li>GitHub: <a href="https://github.com/Lucashasoares">github.com/Lucashasoares</a></li>
         </ul>
     </section>
 
