teste de commit

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 <!-- Seção de Websites -->
 <section class="image-section">
         <div class="image-container">
-          <a href="https://www.lucasdeveloper.ca/analytics-dashboard" target="_blank">
-            <img src="gallery/analytics-dashboard.jpg" alt="analytics-dashboard">
-            <p>Dashboard in Angular</p>
+          <a href="https://www.lucasdeveloper.ca/lista-movies" target="_blank">
+            <img src="gallery/primeFlix.jpg" alt="analytics-dashboard">
+            <p>Now Playing in React</p>
           </a>
         </div>
         <div class="image-container">
           <a href="https://www.lucasdeveloper.ca/movies">
-            <img src="gallery/movies.jpg" alt="movies">
+            <img src="gallery/movies.jpg" alt="movies"> 
             <p>Movies in React</p>
           </a>
         </div>
