--- a/hadassah/index.html
+++ b/hadassah/index.html
@@ -45,6 +45,7 @@
     <div class="slide" style="background-image: url('img3.jpg')"></div>
     <div class="slide" style="background-image: url('img4.jpg')"></div>
     <div class="slide" style="background-image: url('img5.jpg')"></div>
+    <div class="slide" style="background-image: url('img6.jpg')"></div>
   </div>
 
   <script>
