--- a/index.html
+++ b/index.html
@@ -1,77 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Soares - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lucas Soares - Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+  <script defer src="script.js"></script>
 </head>
+
 <body>
-    <header>
-        <h1>Lucas Soares</h1>
-        <p>Software Developer</p>
+  <header>
+    <h1>Lucas Soares</h1>
+    <p>Software Developer</p>
 
-        <!-- Botão do menu hambúrguer -->
-        <div class="menu-toggle" onclick="toggleMenu()">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+    <!-- Botão do menu hambúrguer -->
+    <div class="menu-toggle" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
 
-        <!-- Menu de navegação -->
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#websites">Web Sites</a></li>
-                <li><a href="#certifications">Certifications</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Menu de navegação -->
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#websites">Web Sites</a></li>
+        <li><a href="#certifications">Certifications</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section id="about">
-        <h2>About me</h2>
-        <p>I am a Full-Stack Developer with practical experience in 
-          building responsive and user-friendly websites. I have strong 
-          skills in HTML, CSS, and JavaScript, and I’m developing my 
-          knowledge in React, Java and mySQL. I’m also familiar with GitHub, 
-          Agile/Scrum practices, JUnit, Mockito, and Jenkins. 
-          I’m passionate about learning new technologies, writing 
-          clean and efficient code, and contributing to collaborative, 
-          value-driven teams.</p>
-    </section>
+  <section id="about">
+    <h2>About me</h2>
+    <p>I am a Full-Stack Developer with practical experience in
+      building responsive and user-friendly websites. I have strong
+      skills in HTML, CSS, and JavaScript, and I’m developing my
+      knowledge in React, Java and mySQL. I’m also familiar with GitHub,
+      Agile/Scrum practices, JUnit, Mockito, and Jenkins.
+      I’m passionate about learning new technologies, writing
+      clean and efficient code, and contributing to collaborative,
+      value-driven teams.</p>
+  </section>
 
-    <!-- Seção de Habilidades -->
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML & CSS</li>
-            <li>JavaScript</li>
-            <li>Java - <b>Learning Focus:</b> JavaFX, RabbitMQ, WebSockets, OAuth 2.0</li>
-            <li>My SQL</li>
-            <li>React</li>
-            <li>Agile Methodologies (Scrum, Kanban)</li>
-            <li>Responsive Design</li>
-        </ul>
-    </section>
+  <!-- Seção de Habilidades -->
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML & CSS</li>
+      <li>JavaScript</li>
+      <li>Java - <b>Learning Focus:</b> JavaFX, RabbitMQ, WebSockets, OAuth 2.0</li>
+      <li>My SQL</li>
+      <li>React</li>
+      <li>Agile Methodologies (Scrum, Kanban)</li>
+      <li>Responsive Design</li>
+    </ul>
+  </section>
 
-<!-- Seção de Websites -->
-<section class="image-section">
-        <div class="image-container">
-          <a href="https://www.lucasdeveloper.ca/lista-movies" target="_blank">
-            <img src="gallery/primeFlix.jpg" alt="analytics-dashboard">
-            <p>Now Playing in React</p>
-          </a>
-        </div>
-        <div class="image-container">
-          <a href="https://www.lucasdeveloper.ca/movies">
-            <img src="gallery/movies.jpg" alt="movies"> 
-            <p>Movies in React</p>
-          </a>
-        </div>
-        <!--<div class="image-container">
+  <!-- Seção de Websites -->
+  <section class="image-section">
+    <div class="image-container">
+      <a href="https://www.lucasdeveloper.ca/lista-movies" target="_blank">
+        <img src="gallery/primeFlix.jpg" alt="analytics-dashboard">
+        <p>Now Playing in React</p>
+      </a>
+    </div>
+    <div class="image-container">
+      <a href="https://www.lucasdeveloper.ca/movies" target="_blank">
+        <img src="gallery/movies.jpg" alt="movies">
+        <p>Movies in React</p>
+      </a>
+    </div>
+    <!--<div class="image-container">
           <a href="#">
             <img src="gallery/inProgress.jpg" alt="Project in Progress">
             <p>-----</p>
@@ -83,99 +85,105 @@
             <p>-----</p>
           </a>
         </div>-->
-        <div class="certification-item" onclick="openImage('gallery/inProgress1.jpg')">
-          <img src="gallery/inProgress.jpg" alt="Project in Progress">
-        </div>
-        <div class="certification-item" onclick="openImage('gallery/inProgress1.jpg')">
-          <img src="gallery/inProgress.jpg" alt="Project in Progress">
-        </div>
-      
-</section>
+    <div class="certification-item">
+      <div class="image-container">
+        <a href="https://www.lucasdeveloper.ca/salaryCalculator/" target="_blank">
+          <img src="gallery/salaryCalculator.jpg" alt="Salary Calculator">
+          <p>Salary Calculator in HMTL / CSS / Javascript</p>
+        </a>
+      </div>
+    </div>
+    <div class="certification-item" onclick="openImage('gallery/inProgress1.jpg')">
+      <img src="gallery/inProgress.jpg" alt="Project in Progress">
+    </div>
 
-<section id="websites">
-  <div>
-    <h2>Web Sites</h2>
-  </div>
-  <div class="projects">
-    <div class="card">
-      <img src="gallery/unsueno.jpg" alt="Projeto 1">
-      <div class="card-content">
-        <h3>Un Sueno</h3>
-        <p>Welcome to our sports academy, where we believe soccer & fitness is for everyone.</p>
-        <a href="https://www.ussfa.ca/" class="btn" target="_blank" rel="noopener noreferrer">To view</a>
-      </div>
-    </div>
-  
-    <div class="card">
-      <img src="gallery/neurocore.jpg" alt="Projeto 2">
-      <div class="card-content">
-        <h3>Neurocore Pilates</h3>
-        <p>Introducing a pioneering health concept, our Pilates studio features a team of skilled and seasoned professionals committed to your well-being.</p>
-        <a href="#" class="btn" target="_blank" rel="noopener noreferrer" disabled="disabled">To view</a>
-      </div>
-    </div>
-  
-    <div class="card">
-      <img src="gallery/artpneu.jpg" alt="Projeto 3">
-      <div class="card-content">
-        <h3>Art Pneus</h3>
-        <p>Art Pneus has been growing at a fast pace, bringing the best in tire art.</p>
-        <a href="https://pneu.vercel.app/" class="btn" target="_blank" rel="noopener noreferrer">To view</a>
-      </div>
-    </div>
-  </div>
   </section>
-  
 
-    <!-- Seção de Certificações -->
-<section>
+  <section id="websites">
+    <div>
+      <h2>Web Sites</h2>
+    </div>
+    <div class="projects">
+      <div class="card">
+        <img src="gallery/unsueno.jpg" alt="Projeto 1">
+        <div class="card-content">
+          <h3>Un Sueno</h3>
+          <p>Welcome to our sports academy, where we believe soccer & fitness is for everyone.</p>
+          <a href="https://www.ussfa.ca/" class="btn" target="_blank" rel="noopener noreferrer">To view</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="gallery/nexuscare.jpg" alt="Projeto 2">
+        <div class="card-content">
+          <h3>Nexus Care</h3>
+          <p>Introducing a pioneering health concept, our Pilates studio features a team of skilled and seasoned
+            professionals committed to your well-being.</p>
+          <a href="https://www.nexuscare.bsb.br/" class="btn" target="_blank" rel="noopener noreferrer" disabled="disabled">To view</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="gallery/artpneu.jpg" alt="Projeto 3">
+        <div class="card-content">
+          <h3>Art Pneus</h3>
+          <p>Art Pneus has been growing at a fast pace, bringing the best in tire art.</p>
+          <a href="https://pneu.vercel.app/" class="btn" target="_blank" rel="noopener noreferrer">To view</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Seção de Certificações -->
+  <section>
     <h2>Certifications</h2>
     <div id="certifications">
-        <div class="certification-item" onclick="openImage('gallery/scrum.jpg')">
-            <img src="gallery/scrum-thumb.jpg" alt="Scrum Master" />
-            <p>Scrum Master</p>
-        </div>
-        <!--<div class="certification-item" onclick="openImage('gallery/product-owner.jpg')">
+      <div class="certification-item" onclick="openImage('gallery/scrum.jpg')">
+        <img src="gallery/scrum-thumb.jpg" alt="Scrum Master" />
+        <p>Scrum Master</p>
+      </div>
+      <!--<div class="certification-item" onclick="openImage('gallery/product-owner.jpg')">
             <img src="gallery/product-owner-thumb.jpg" alt="Product Owner" />
             <p>Product Owner</p>
         </div>-->
-        <div class="certification-item" onclick="openImage('gallery/kanban.jpg')">
-            <img src="gallery/kanban-thumb.jpg" alt="Kanban" />
-            <p>Kanban</p>
-        </div>
-        <div class="certification-item" onclick="openImage('gallery/javascript.jpg')">
-            <img src="gallery/javascript-thumb.jpg" alt="JavaScript" />
-            <p>JavaScript</p>
-        </div>
+      <div class="certification-item" onclick="openImage('gallery/kanban.jpg')">
+        <img src="gallery/kanban-thumb.jpg" alt="Kanban" />
+        <p>Kanban</p>
+      </div>
+      <div class="certification-item" onclick="openImage('gallery/javascript.jpg')">
+        <img src="gallery/javascript-thumb.jpg" alt="JavaScript" />
+        <p>JavaScript</p>
+      </div>
     </div>
-</section>
+  </section>
 
-<section>
-  <h2>Creative Work: Logo Design</h2>
-  <div class="carrossel">
-  <!-- Seta para voltar -->
-  <button class="carrossel-seta carrossel-seta-esquerda" onclick="moverCarrossel(-1)">&#10094;</button>
-  
-  <div class="carrossel-container">
-      <!--<div class="carrossel-item">
+  <section>
+    <h2>Creative Work: Logo Design</h2>
+    <div class="carrossel">
+      <!-- Seta para voltar -->
+      <button class="carrossel-seta carrossel-seta-esquerda" onclick="moverCarrossel(-1)">&#10094;</button>
+
+      <div class="carrossel-container">
+        <!--<div class="carrossel-item">
           <img src="gallery/logos/cjp-240x215.png" alt="Imagem 1">
       </div>-->
-      <div class="carrossel-item">
+        <div class="carrossel-item">
           <img src="gallery/logos/copy7-575x515.png" alt="Imagem 2">
-      </div>
-      <div class="carrossel-item">
+        </div>
+        <div class="carrossel-item">
           <img src="gallery/logos/corpo-575x515.png" alt="Imagem 3">
-      </div>
-      <!--<div class="carrossel-item">
+        </div>
+        <!--<div class="carrossel-item">
           <img src="gallery/logos/fatima-575x515.png" alt="Imagem 4">
       </div>-->
-      <div class="carrossel-item">
+        <div class="carrossel-item">
           <img src="gallery/logos/icl-575x515.png" alt="Imagem 5">
-      </div>
-      <div class="carrossel-item">
+        </div>
+        <div class="carrossel-item">
           <img src="gallery/logos/optica-575x515.png" alt="Imagem 6">
-      </div>
-      <!--<div class="carrossel-item">
+        </div>
+        <!--<div class="carrossel-item">
           <img src="gallery/logos/paes-575x515.png" alt="Imagem 7">
       </div>
       <div class="carrossel-item">
@@ -184,37 +192,38 @@
       <div class="carrossel-item">
           <img src="gallery/logos/respire-575x515.png" alt="Imagem 9">
       </div>-->
-      <div class="carrossel-item">
+        <div class="carrossel-item">
           <img src="gallery/logos/zen-575x515.png" alt="Imagem 10">
+        </div>
       </div>
+
+      <!-- Seta para avançar -->
+      <button class="carrossel-seta carrossel-seta-direita" onclick="moverCarrossel(1)">&#10095;</button>
+    </div>
+  </section>
+
+  <!-- Modal para mostrar imagem maior -->
+  <div id="image-modal" class="modal" onclick="closeImage()">
+    <img id="modal-img" src="" alt="Imagem maior" />
   </div>
 
-  <!-- Seta para avançar -->
-  <button class="carrossel-seta carrossel-seta-direita" onclick="moverCarrossel(1)">&#10095;</button>
-</div>
-</section>
 
-<!-- Modal para mostrar imagem maior -->
-<div id="image-modal" class="modal" onclick="closeImage()">
-  <img id="modal-img" src="" alt="Imagem maior" />
-</div>
+  <!-- Seção de Contato -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Connect with me on:</p>
+    <ul>
+      <li>Email: <a href="mailto:lucashasoares@gmail.com">lucashasoares@gmail.com</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/lucas-ha-soares/">linkedin.com/in/lucas-ha-soares</a></li>
+      <li>GitHub: <a href="https://github.com/Lucashasoares">github.com/Lucashasoares</a></li>
+    </ul>
+  </section>
 
-
-    <!-- Seção de Contato -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Connect with me on:</p>
-        <ul>
-            <li>Email: <a href="mailto:lucashasoares@gmail.com">lucashasoares@gmail.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/lucas-ha-soares/">linkedin.com/in/lucas-ha-soares</a></li>
-            <li>GitHub: <a href="https://github.com/Lucashasoares">github.com/Lucashasoares</a></li>
-        </ul>
-    </section>
-
-    <script>
-        function toggleMenu() {
-            document.querySelector("nav ul").classList.toggle("active");
-        }
-    </script>
+  <script>
+    function toggleMenu() {
+      document.querySelector("nav ul").classList.toggle("active");
+    }
+  </script>
 </body>
+
 </html>
